ajout de la gestion d erreur